# spherix-lib

./: CMakeLists.txt  README.md
include/: ConfigReader.h  Kalman.h  SpherixEncoder.h
src/: ConfigReader.cc  Kalman.cc  SpherixEncoder.cc
test/: CMakeLists.txt  TestSampleTrajectory.cpp  spherixcfg.txt
